# nanorust

./: Cargo.toml  LICENSE  README.md  build-and-flash.sh  build.rs
.cargo/: config.toml
ec/: Cargo.toml
ec/src/: endian.rs  error.rs  lib.rs  util.rs
ec/src/secp256k1/: consts.rs  field.rs  group.rs  mod.rs  modinv.rs  scalar.rs
ec/tests/secp256k1/: consts.rs  field.rs  mod.rs  modinv.rs  scalar.rs
hashes/: Cargo.toml
hashes/src/: consts.rs  inner.rs  lib.rs
hashes/tests/: sha.rs
src/: led.rs  main.rs  rand.rs  text.rs  utils.rs
